--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "wiredep": "^3.0.0"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "angular": "^1.5.6",
+    "angular-bootstrap-calendar": "^0.20.2",
+    "bootstrap": "^3.3.6",
+    "express": "^4.13.4",
+    "moment": "^2.13.0"
   }
 }
