--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,10 @@
         "dist/css/bootstrap.css",
         "dist/js/bootstrap.js"
       ]
-    }
+    },
+    "font-awesome" : {
+      "main" : "css/font-awesome.css"
+}
   },
   "dependencies": {
     "angular": "^1.5.0",
@@ -35,6 +38,7 @@
     "satellizer": "^0.14.0",
     "angular-material": "^1.0.6",
     "ng-table": "^0.8.3",
-    "angular-ui-calendar": "^1.0.1"
+    "angular-ui-calendar": "^1.0.1",
+    "font-awesome": "^4.6.3"
   }
 }
